@@ -1,3 +1,7 @@
+2006-09-23  Richard Dale  <rdale@foton.es>
+
+	* Fixed crash when a class didn't have any signals defined
+
 2006-09-23  Arno Rehn  <arno@arnorehn.de>
 
 	* The signatures for slots and signals are now autogenerated, so it's not necessary
